--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 
 
           <!-------------------- 3rd section -------------------->
-        <section id="section-three" class="sectionThree">
+        <!-- <section id="section-three" class="sectionThree">
             <div class="container">
                 <div class="chooseUsHeader text-center col-12">
                     <h2>Why Choose Us?</h2>
@@ -471,7 +471,7 @@
                     </section>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-------------------- end of 3rd section -------------------->
 
