--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         font-family: 'Poppins' !important;
     }
     header{
-        height: auto;
+        height: 50px;
         padding: 0 7px;
         width: 100%;
     }
@@ -48,13 +48,20 @@
         border-radius: unset;
     }
     .cart a{
-       display: none;
+        display: none;
+    }
+    .offcanvas-start {
+        width: calc(100vw - 50px);
+    }
+    main{
+        position: relative;
+        top: 50px;
     }
     .m-md-auto {
         margin: 0 !important;
     }
     .image-banner span{
-        font-size: 10px;
+        font-size: 8px;
     }
     .image-banner span::before{
         width: 7px;
@@ -75,36 +82,98 @@
         top: 70px !important;
         right: -60% !important;
     }
-    .image-banner span:nth-child(3){
-        top: 200px !important;
-        left: 53% !important;
+    .image-banner span:nth-child(3) {
+        top: 180px !important;
+        left: 40% !important;
     }
     .image-banner span:nth-child(4){
         top: 50px !important;
         left: 15% !important;
     }
-    .image-banner span:nth-child(5){
-        left: -100px !important;
-        top: 260px !important;
+    .image-banner span:nth-child(5) {
+        right: 20px !important;
+        top: 180px !important;
     }
     .image-banner .map-bg {
-        height: 300px;
-        width: 400px;   
+        height: 210px;
+        width: 300px;  
         margin: 0 auto;
     }
     .image-banner .map-bg .map-logo {
         left: 0;
     }
     .image-banner .map-bg .man-on-map {
-        left: 18%;;
-        max-width: 95%
+        left: 18%;
+        max-width: 90%;
+    }
+    #section-two{
+        padding: 50px 0;
     }
     #section-three section .redbg{
         margin: 0 auto;
     }
+    .appetizer {
+        margin: 20px auto;
+        width: 80% !important;
+        padding: 10px;
+    }
+    .appetizer img {
+        width: 65px;
+        height: auto;
+    }
+    .appetizer-image button, .pt-3 {
+        font-size: 11px;
+    }
+    .appetizer-description {
+        padding: 14px 0;
+        display: none;
+    }
+    .appetizer-description h3 {
+        margin: '';
+        font-weight: bolder;
+    }
+    .appetizer-description h5 {
+        font-size: 12px;
+        margin: '';
+    }
+    .appetizer:nth-child(1),
+    .appetizer:nth-child(2),
+    .appetizer:nth-child(3),
+    .appetizer:nth-child(4){
+        animation: 1s slideIn ease-in-out forwards;
+    }
+    .appetizer:nth-child(1){
+        animation-delay: 6s;
+    }
+    .appetizer:nth-child(2){
+        animation-delay: 6.2s;
+    }
+    .appetizer:nth-child(3){
+        animation-delay: 6.4s;
+    }
+    .appetizer:nth-child(4){
+        animation-delay: 6.6s;
+    }
+    @keyframes slideIn{
+        0%{
+            transform: translateX(75px);
+            opacity: 0;
+        }
+        50%{
+            transform: translateX(0);
+            opacity: .6;
+        }
+        100%{
+            transform: translateX(0);
+            opacity: 1;
+        }
+    }
+    .pt-3 {
+        padding: .4rem 1rem !important;
+    }
     section .redbg {
-        width: 300px;
-        height: 260px;
+        width: 260px;
+        height: auto;
     }
     #section-three section .redbg img {
         bottom: -4%;
@@ -156,6 +225,13 @@
             opacity: 1;
         }
     }
+    #section-four .col-7 p {
+        margin: 0;
+        font-size: 12px;
+    }
+    #section-four .btn-danger {
+        font-size: 11px;
+    }
     #section-five .redbg{
         margin: 0 auto;
     }
@@ -175,67 +251,13 @@
         width: 80%;
     }
     #section-six{
-        padding: 20px  0;
-    }
-    #section-two{
-        padding: 50px 0;
-    }
-    .foods-appetizer {
-        display: block;
-    }
-    .appetizer {
-        justify-content: center;
-        margin: 20px auto;
-        width: 50%;
-    }
-    .appetizer-image {
-        padding: 14px 16px;
-        flex-direction: column;
+        padding: 20px 0;
     }
     .imagery{
         top: -150px;
         left: 50px;
         animation: slipin .7s ease-in-out;
-    }      
-    .appetizer{
-        align-items: center;
-        opacity: 0;
-    }
-    .appetizer:nth-child(1),
-    .appetizer:nth-child(2),
-    .appetizer:nth-child(3),
-    .appetizer:nth-child(4){
-        animation: 1s slideIn ease-in-out forwards;
-    }
-    .appetizer:nth-child(1){
-        animation-delay: 6s;
-    }
-    .appetizer:nth-child(2){
-        animation-delay: 6.2s;
-    }
-    .appetizer:nth-child(3){
-        animation-delay: 6.4s;
-    }
-    .appetizer:nth-child(4){
-        animation-delay: 6.6s;
-    }
-    @keyframes slideIn{
-        0%{
-            transform: translateX(75px);
-            opacity: 0;
-        }
-        50%{
-            transform: translateX(0);
-            opacity: .6;
-        }
-        100%{
-            transform: translateX(0);
-            opacity: 1;
-        }
-    }
-
-
-
+    } 
     .form-floating > label{
         font-size: .8rem;
         font-family: 'Poppins';
@@ -245,6 +267,10 @@
     }
     .form-floating > a{
         font-size: .8rem;
+    }
+    #scrollToTop {
+        font-size: 22px;
+        padding: 18px 15px;
     }
 
 }
@@ -314,7 +340,7 @@
 
     <main>
          <!-------------------- first section -------------------->
-        <!-- <div class="container d-flex justify-content-center align-items-md-center p-md-0 p-lg-0 first-section mx-lg-auto ">
+        <div class="container d-flex justify-content-center align-items-md-center p-md-0 p-lg-0 first-section mx-lg-auto ">
             <div class="row">
                 <div class="d-none d-md-block col-md-4 col-lg-4 text-banner">
                     <h1>Fastest <img src="images/delivery-man.png" class="position-relative" alt=""><div>Food Delivery</div><span>In Nigeria</span></h1>
@@ -337,7 +363,7 @@
                     </div>
                 </div>
             </div>
-        </div>  -->
+        </div> 
          <!-------------------- end of first section -------------------->
 
            <!-------------------- 2nd section -------------------->
@@ -512,10 +538,10 @@
             <div class="container">
                 <h2 class="text-black-50 text-center">Explore our foods</h2>
                 <div class="subheader d-flex justify-content-between align-items-center my-4">
-                    <div class="col-6">
+                    <div class="col-7">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis illo tenetur voluptate. Explicabo totam, dolorem laudantium fugiat architecto illo quo.</p>
                     </div>
-                    <div class="col-2">
+                    <div class="col-3">
                         <button href="" class="btn btn-danger">See All</button>
                     </div>
                 </div>
