--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                    <button class="btn">Drinks</button>
                 </div>
                 <div class="row align-items-baseline foods">
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/fries.png" alt="" class="img-fluid">
                         </div>
@@ -559,7 +559,7 @@
                             <h4>Fries</h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/drink9.png" alt="" class="img-fluid">
                         </div>
@@ -567,7 +567,7 @@
                             <h4>Pizza</h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/frenchfries.jpg" alt="" class="img-fluid">
                         </div>
@@ -575,7 +575,7 @@
                             <h4>Pizza</h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/drink7.png" alt="" class="img-fluid">
                         </div>
@@ -583,7 +583,7 @@
                             <h4>Pizza</h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/harmburger-drink.jpg" alt="" class="img-fluid">
                         </div>
@@ -591,7 +591,7 @@
                             <h4>Pizza</h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/drink2.png" alt="" class="img-fluid">
                         </div>
@@ -599,7 +599,7 @@
                             <h4>Pizza</h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/drink.png" alt="" class="img-fluid">
                         </div>
@@ -607,7 +607,7 @@
                             <h4>Pizza</h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/doughnuts1.png" alt="" class="img-fluid">
                         </div>
@@ -615,7 +615,7 @@
                             <h4>Pizza</h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/drink6.png" alt="" class="img-fluid">
                         </div>
@@ -623,7 +623,7 @@
                             <h4>Pizza</h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/hotdog.jpg" alt="" class="img-fluid">
                         </div>
@@ -631,7 +631,7 @@
                             <h4>Pizza</h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/drink4.png" alt="" class="img-fluid">
                         </div>
@@ -639,7 +639,7 @@
                             <h4>Pizza</h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/drink8.png" alt="" class="img-fluid">
                         </div>
@@ -647,7 +647,7 @@
                             <h4>Pizza</h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/doughnuts3.png" alt="" class="img-fluid">
                         </div>
@@ -655,7 +655,7 @@
                             <h4>Pizza</h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/drink10.png" alt="" class="img-fluid">
                         </div>
@@ -663,7 +663,7 @@
                             <h4>Pizza</h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/pizza.png" alt="" class="img-fluid">
                         </div>
@@ -671,7 +671,7 @@
                             <h4>Pizza</h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/drink3.png" alt="" class="img-fluid">
                         </div>
@@ -679,7 +679,7 @@
                             <h4>Pizza</h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/hamburger.png" alt="" class="img-fluid">
                         </div>
@@ -687,7 +687,7 @@
                             <h4>Pizza</h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/drink5.png" alt="" class="img-fluid">
                         </div>
@@ -695,7 +695,7 @@
                             <h4>Pizza</h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/frenchfries.jpg" alt="" class="img-fluid">
                         </div>
@@ -703,7 +703,7 @@
                             <h4>Pizza</h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/drink3.png" alt="" class="img-fluid">
                         </div>
@@ -711,7 +711,7 @@
                             <h4>Pizza</h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 w-25 food">
+                    <div class="col-6 col-md-4 col-lg-3 food">
                         <div>
                             <img src="images/doughnuts2.png" alt="" class="img-fluid">
                         </div>
