--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="searchBar d-flex align-items-stretch d-lg-none position-relative">
                 <i class="icon-search2 position-absolute"></i>
                 <input type="text" autocomplete="on" placeholder="Search">
-                <a href="" class="btn" style="transform: rotateZ(-180deg); font-size: 20px; background-color: rgba(15,115,238,255); display: flex;align-items: center;color:white; border-radius:40pc 0 0 40pc; "><i class="icon-keyboard_backspace"></i></a>
+                <a href="" class="btn" style="transform: rotateZ(-180deg); font-size: 20px; background-color: rgba(15,115,238,255); display: flex;align-items: center;color:white; border-radius:3x; margin-left: 10px"><i class="icon-keyboard_backspace"></i></a>
             </div>
         </div>
         
@@ -134,7 +134,10 @@
                 width: 125px !important;
             }
             .side-images-right{
-                top: 31.1% !important;
+                display: none;
+            }
+            .footer .container > div .newsletter form a i{
+                font-size: 16px !important;
             }
         }
         </style>
@@ -187,7 +190,7 @@
                         </div>
                         <div>
                             <p> Start your order 
-                                <a href="">HERE <i class="icon-long-arrow-right"></i></a>
+                                <a href="">HERE</a>
                             </p>
                         </div>
                     </div>
@@ -515,7 +518,6 @@
                 <div class="row col-12 d-md-flex justify-content-md-evenly align-items-md-top mx-auto">
                     <div class="brand d-block d-md-none">
                         <a href=""><img src="images/logo.png" alt=""></a>
-                        <h3>Food<span style="color: rgb(15,115,238);">Express</span></h3>
                     </div>
                     <div class="newsletter d-block d-md-none">
                         <p>Subscribe to our newsletter to get updates on our latest offers!</p>
